# news-summarize

./: .gitignore  API_README.md  Dockerfile  README.md  REFACTORING_SUMMARY.md  api.py  api_server.py  benchmark_performance.py  config.example.env  docker-compose.yml  example_usage.py  fast_summarize.py  main.py  news_summarizer.py  pyproject.toml  requirements.txt  setup.py  start_api.sh
examples/: api_usage.py  basic_usage.py
examples/examples/: test_article.json  test_html_curl.json
src/api/: __init__.py  app.py  client.py  models.py
src/cli/: __init__.py  main.py
src/news_summarizer/: __init__.py  config.py  core.py  utils.py
src/news_summarizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api_request.py  test_exact_json.py  test_html_processing.py  test_summarizer.py
tests/unit/: test_api.py
